--- a/style.css
+++ b/style.css
@@ -112,6 +112,6 @@ a ion-icon{
 
 @media screen and (max-width:800px)
 {
-    #welcome-section,#projects,#profile-links{height:100px;}
+    #welcome-section,#projects,#profilelink{height:100px;}
 }
 
