--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ li a{color:cornsilk;text-decoration: none;}
 #welcome-section{
     background-color: rgb(36, 30, 30);
     margin-top: 3%;
-    height:100vh;
+    height:100px;
 }
 
 #welcome-section h1,#profilelink h1,#projects h1{
@@ -57,12 +57,12 @@ li a{color:cornsilk;text-decoration: none;}
 
 #projects{
     background-color: rgb(56, 56, 138);
-    height:120vh;
+    height:100px;
 }
 
 #profilelink{
     background-color: rgb(36, 30, 30);
-    height:100vh; 
+    height:100px; 
   
 }
 
@@ -110,8 +110,8 @@ a ion-icon{
     font-size: 20px;
 }
 
-@media screen and (max-width:800px)
+@media screen and (min-width:800px)
 {
-    #welcome-section,#projects,#profilelink{height:100px;}
+    #welcome-section,#projects,#profilelink{height:100vh;}
 }
 
